<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmployeeActivity">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" tools:srcCompat="@tools:sample/avatars[0]"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:id="@+id/avatarImageView"
            android:contentDescription="@string/avatarContent"/>
    <TextView
            android:text="@string/nameString"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
            app:layout_constraintStart_toStartOf="@+id/avatarImageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:background="#262626" android:paddingTop="4dp"
            android:paddingBottom="4dp" android:textAlignment="center"
            android:textColor="@android:color/background_light"/>
    <TextView
            android:text="@string/emailString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:id="@+id/emailTextView" app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            android:layout_marginStart="8dp" android:textSize="12sp"/>
    <TextView
            android:text="@string/titleString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
            app:layout_constraintStart_toStartOf="@+id/phoneTextView"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/phoneString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/departmentString"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/departmentTextView" app:layout_constraintStart_toStartOf="@+id/titleTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" android:textSize="12sp"/>
    <TextView
            android:text="@string/descString"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/descTextView" app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>